--- a/package.json
+++ b/package.json
@@ -9,12 +9,19 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@clerk/nextjs": "^6.22.0",
+    "@emailjs/browser": "^4.4.1",
     "@radix-ui/react-dialog": "^1.1.14",
+    "@radix-ui/react-label": "^2.1.7",
+    "@radix-ui/react-select": "^2.2.5",
     "@radix-ui/react-slot": "^1.2.3",
+    "@radix-ui/react-switch": "^1.2.5",
+    "@radix-ui/react-tabs": "^1.1.12",
     "@react-three/drei": "^10.3.0",
     "@react-three/fiber": "^9.1.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "convex": "^1.24.8",
     "gsap": "^3.13.0",
     "lucide": "^0.515.0",
     "lucide-react": "^0.515.0",
@@ -23,6 +30,9 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
+    "react-responsive": "^10.0.1",
+    "sonner": "^2.0.5",
+    "svix": "^1.67.0",
     "tailwind-merge": "^3.3.1",
     "three": "^0.177.0"
   },
