--- a/package.json
+++ b/package.json
@@ -25,9 +25,9 @@
     "convex": "^1.24.8",
     "gsap": "^3.13.0",
     "lucide-react": "^0.515.0",
-    "next": "15.3.3",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
+    "next": "^15.3.3",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-icons": "^5.5.0",
     "react-responsive": "^10.0.1",
     "sonner": "^2.0.5",
